--- a/cosmeticpro/templates/base.html
+++ b/cosmeticpro/templates/base.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}cosmetic{% endblock title %}</title>
+    <title>{% block title %}cosmeticpro{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="-">
+    <meta name="description" content="Solovka Dmytro">
     <meta name="author" content="Solovka Dmytro">
 
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
@@ -42,7 +42,7 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">cosmetic</a>
+          <a class="navbar-brand" href="{% url 'home' %}">cosmeticpro</a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
