--- a/cosmeticpro/templates/base.html
+++ b/cosmeticpro/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="{{ LANGUAGE_CODE }}">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta httpEquiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}cosmeticpro{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cosmetology site">
