--- a/cosmeticpro/templates/graphql/accounts/k.html
+++ b/cosmeticpro/templates/graphql/accounts/k.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta httpEquiv="x-ua-compatible" content="ie=edge">
   <title>Password Reset</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
