--- a/cosmeticpro/templates/graphql/accounts/signup_email.html
+++ b/cosmeticpro/templates/graphql/accounts/signup_email.html
@@ -3,8 +3,8 @@
   <head>
     <title>
     </title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge">
+    <meta httpEquiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
       #outlook a{padding: 0;}
@@ -240,7 +240,7 @@
                         <table border='0' cellpadding='0' cellspacing='0' role='presentation' style='border-collapse:separate;line-height:100%;width:210px;'>
                           <tr>
                             <td align='center' bgcolor='#feae39' role='presentation' style='background-color:#feae39;border:none;border-radius:3px;cursor:auto;height:25px;padding:10px 25px;' valign='middle'>
-                              <a href='https://localhost:8000/?token={{token}}&?email={{email}}' style='background:#feae39;color:#ffffff;font-family:Open Sans, Arial, sans-serif;font-size:17px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:uppercase;' target='_blank'>
+                              <a href='{{url_verify}}' style='background:#feae39;color:#ffffff;font-family:Open Sans, Arial, sans-serif;font-size:17px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:uppercase;' target='_blank'>
                                 {{btn_name}}
                               </a>
                             </td>
